Blockchain extends LinkedList