@@ -4,10 +4,10 @@ import blockchain.config.Config;
 import blockchain.security.SHA256Hash;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
-public class Blockchain {
-    private final List<Block> blockchain;
+public class Blockchain extends LinkedList<Block> {
     private int N;
     private final int tTarget_sec;
     private final int maxMessagesPerBlock;
@@ -17,7 +17,6 @@ public class Blockchain {
     private int minMsgId;
 
     public Blockchain() {
-        blockchain = new ArrayList<>();
         N = Config.INITIAL_LEADING_ZEROS;
         tTarget_sec = Config.BLOCK_TARGET_CREATION_SECONDS;
         maxMessagesPerBlock = Config.MAX_MESSAGES_PER_BLOCK;
@@ -29,7 +28,7 @@ public class Blockchain {
 
     public void addNewBlock(Block block) {
         if (isValidBlock(block)) {
-            blockchain.add(block);
+            this.add(block);
             activateNewData();
             System.out.println();
             System.out.println("Block:");
@@ -43,12 +42,12 @@ public class Blockchain {
     }
 
     private boolean isValidBlock(Block block) {
-        if (!block.getPreviousHash().equals(blockchain.isEmpty() ?
-                "0" : blockchain.get(blockchain.size() - 1).getHash()))
+        if (!block.getPreviousHash().equals(this.isEmpty() ?
+                "0" : this.getLast().getHash()))
             return false;
         // check that every message has an identifier greater than the maximum identifier of the previous block
-        if (!blockchain.isEmpty()) {
-            int maxIdPrevBlock = blockchain.get(blockchain.size()-1).getData().stream()
+        if (!this.isEmpty()) {
+            int maxIdPrevBlock = this.getLast().getData().stream()
                     .mapToInt(Message::getId)
                     .max()
                     .orElse(0);
@@ -60,10 +59,6 @@ public class Blockchain {
 
         }
         return false;
-    }
-
-    public ArrayList<Block> getBlockchain() {
-        return new ArrayList<Block>(blockchain);
     }
 
     public int getN() {
@@ -78,10 +73,6 @@ public class Blockchain {
             N++;
             System.out.println(" N was increased to " + N);
         } else System.out.println("N stays the same");
-    }
-
-    public int getSize() {
-        return blockchain.size();
     }
 
     public void addMsg(Message msg) {
@@ -113,7 +104,7 @@ public class Blockchain {
 
     public int getBalance(String node, boolean includeMsgQueues) {
         int balance = 100;
-        for (Block block : blockchain) {
+        for (Block block : this) {
             if (block.getMinerId().equals(node)){
                 balance += block.getAward();
             }
